--- a/stocks/quotes/templates/contact.html
+++ b/stocks/quotes/templates/contact.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,4 +10,6 @@
 <h1>Contact us!</h1>
 
 </body>
+
+{% endblock %}
 </html>
