--- a/stocks/quotes/templates/home.html
+++ b/stocks/quotes/templates/home.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
+
 <h1>Hello world!!</h1>
 
+
 </body>
+
+{% endblock %}
 </html>
