--- a/stocks/quotes/templates/base.html
+++ b/stocks/quotes/templates/base.html
@@ -24,6 +24,9 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item">
+        <a class="nav-link" href="{% url 'add_stock' %}">Add Stock</a>
+      </li>
+        <li class="nav-item">
         <a class="nav-link" href="{% url 'about' %}">About</a>
       </li>
 
