--- a/stocks/quotes/templates/home.html
+++ b/stocks/quotes/templates/home.html
@@ -57,7 +57,7 @@
         <!--{{ api. }}<br/>-->
         <!-- api.items get specific info from the api for the stock -->
         {% for key, value in api.items %}
-            {{ key }}: {{ value }}<br/>
+         <!-- Default look  {{ key }}: {{ value }} --><br/>
         {% endfor %}
 
 
