--- a/stocks/quotes/templates/add_stock.html
+++ b/stocks/quotes/templates/add_stock.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 <h1>Add Stock</h1>
-
+<form action="{% url 'add_stock' %}"class="form-inline my-2 my-lg-0" method="POST">
+        {% csrf_token %}
+      <input class="form-control mr-sm-2" type="search" placeholder="Add Ticker to Portfolio" aria-label="Search" name="ticker">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add Stock</button>
+    </form>
 
 
 {% for item in ticker %}
