--- a/stocks/quotes/templates/base.html
+++ b/stocks/quotes/templates/base.html
@@ -12,6 +12,12 @@
     <title>Stock Portfolio</title>
   </head>
   <body>
+  <style>
+      body{
+  background-color: #808080;
+}
+  </style>
+
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="{% url 'home' %}">Stock Portfolio</a>
