--- a/stocks/quotes/templates/add_stock.html
+++ b/stocks/quotes/templates/add_stock.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
+
+<!--Back to top of page-->
+<a name="top"></a>
+<!--Back to top of page-->
+<a name="bid_info"></a>
+<a name="time_market"></a>
+<a name="price_vol"></a>
+
+
 {% block content %}
 <html lang="en">
 <head>
@@ -7,6 +16,8 @@
     <title>Add Stock</title>
 </head>
 <body>
+
+
 <h1>Add Stock</h1>
 <form action="{% url 'add_stock' %}"class="form-inline my-2 my-lg-0" method="POST">
         {% csrf_token %}
@@ -19,15 +30,73 @@
 <!-- SPACE between add stock & table End -->
 
 <!-- Table Head Option for the Stock -->
-<table class="table table-striped table-bordered table-hover">
-  <thead  class="thead-dark">
+<!-- Style Start-->
+<style>
+    h5{text-align:center;}
+    h4{text-align:center;  font-weight: bold;}
+
+
+    </style>
+<!-- Style End-->
+
+
+
+<!-- Basic Company Info Start pt1-->
+<h5><table align="center" class="table table-striped table-bordered table-hover"  style="width:400px; ">
+  <thead  class="thead-dark" >
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+    <h5>
+        <th scope="col">Company Name</th>
+    </h5>
     </tr>
   </thead>
+
+    <!-- Basic Company Info Row Start pt1-->
+     <tbody>
+    <tr>
+      <td>Name</td>
+    </tr>
+     </tbody>
+     <!-- Basic Company Info Row End pt1-->
+ </table>
+     </h5>
+ <!-- Basic Company Info Table End pt1-->
+
+
+ <!-- Basic Company Info Table Start pt2-->
+ <h5><table align="center" class="table table-striped table-bordered table-hover"  style="width:400px; ">
+  <thead  class="thead-dark" >
+    <tr>
+    <h5>
+        <th scope="col">Symbol</th>
+      <th scope="col">Exchange</th>
+    </h5>
+    </tr>
+  </thead>
+      <!-- Basic Company Info Start pt2-->
+     <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+    </tr>
+     </tbody>
+      <!-- Basic Company Info Row  End pt2-->
+ </table>
+     </h5>
+ <!-- Basic Company Info Table End pt2-->
+
+ <!-- Bid Information & 52 Week High/Low Table Start-->
+<h5><table align="center" class="table table-striped table-bordered table-hover" >
+<thead  class="thead-dark">
+ <h4>Bid Information & 52 Week High/Low</h4>
+    <tr>
+      <th scope="col">Bid Price</th>
+      <th scope="col">Bid Size</th>
+      <th scope="col">52 Week High:</th>
+      <th scope="col">52 Week Low</th>
+    </tr>
+  </thead>
+     <!-- Bid Information & 52 Week High/Low Row Start -->
   <tbody>
     <tr>
       <th scope="row">1</th>
@@ -48,16 +117,96 @@
       <td>@twitter</td>
     </tr>
   </tbody>
+     <!-- Bid Information & 52 Week High/Low Row End-->
 </table>
+    </h5>
+ <!-- Bid Information & 52 Week High/Low Table End-->
+
+ <!-- Time & Market Information Table Start-->
+<h5><table align="center" class="table table-striped table-bordered table-hover" >
+<thead  class="thead-dark">
+ <h4>Time & Market Information</h4>
+    <tr>
+      <th scope="col">Latest Time</th>
+      <th scope="col">Latest Update</th>
+      <th scope="col">Real Time Size</th>
+      <th scope="col">Market Available </th>
+        <th scope="col">Market Cap</th>
+    </tr>
+  </thead>
+
+      <!-- Time & Market Information Info Start-->
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+      <td>@fat</td>
+    </tr>
+
+
+  </tbody>
+     <!-- Time & Market Information Info End-->
+</table>
+    </h5>
+ <!-- Time & Market Information End-->
+
+
+<!-- Price & Volume table Start-->
+ <h5><table class="table table-striped table-bordered table-hover" >
+<thead  class="thead-dark">
+ <h4>Price & Volume </h4>
+    <tr>
+      <th scope="col">Latest Price</th>
+      <th scope="col">Previous Close</th>
+      <th scope="col">Previous Volume</th>
+      <th scope="col">Previous Change</th>
+      <th scope="col">Percent Change</th>
+      <th scope="col">Volume</th>
+      <th scope="col">Average Total Volume</th>
+    </tr>
+  </thead>
+  <!-- Price & Volume Row Info Start-->
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+    </tr>
+
+  </tbody>
+     <!-- Price & Volume Row Info End-->
+</table>
+     </h5>
+<!-- Price & Volume End-->
+
+
+
 <!-- Table Head Option for the Stock END -->
 
-
+<br/>
 
 
 {% for item in ticker %}
 <b>{{ item }}</b> - <a href="{% url 'delete' item.id%}"> <span style='font-size:15px;'>&#10060; </span></a><br/>
     {% endfor %}
 </body>
-
+<br/>
+<br/>
+<!--Back to top of page-->
+<a href="#top" ><p align="right">Back to top</p></a>
+<!--Back to top of page-->
 {% endblock %}
 </html>
