--- a/stocks/quotes/templates/base.html
+++ b/stocks/quotes/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -12,7 +13,11 @@
     <title>Stock Portfolio</title>
   </head>
   <body>
-
+<style>
+      body{
+            background-color: #808080;
+      }
+  </style>
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
