--- a/stocks/quotes/templates/add_stock.html
+++ b/stocks/quotes/templates/add_stock.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
 
-<!--Back to top of page-->
-<a name="top"></a>
-<!--Back to top of page-->
-<a name="bid_info"></a>
-<a name="time_market"></a>
-<a name="price_vol"></a>
-
 
 {% block content %}
 <html lang="en">
@@ -42,201 +35,62 @@
 
 
 <!-- Basic Company Info Start pt1-->
-<h5><table align="center" class="table table-striped table-bordered table-hover"  style="width:400px; ">
+<h5><table  class="table table-striped table-bordered table-hover"  >
   <thead  class="thead-dark" >
     <tr>
     <h5>
         <th scope="col">Company Name</th>
         <th scope="col">Symbol</th>
       <th scope="col">Exchange</th>
-      <th scope="col">Delete Stock </th>
+      <th scope="col">52 Week High:</th>
+      <th scope="col">52 Week Low</th>
+        <th scope="col">Latest Price</th>
+      <th scope="col">Previous Close</th>
+      <th scope="col">Previous Volume</th>
+         <th scope="col">Delete Stock </th>
+
     </h5>
     </tr>
   </thead>
     <!-- Basic Company Info Row Start pt1-->
      <tbody>
-
     {% if ticker %}
-     {% for item in ticker %}
+
+
+         {% for list_item in output %}
      <tr>
-         <th scope="row"><b>{{ item }}</b></th>
-         <th scope="row"><b>{{ item }}</b></th>
-         <th scope="row"><b>{{ item }}</b></th>
-         <td><br><a href="{% url 'delete' item.id%}"> <span style='font-size:15px;'>&#10060; </span></a></br></td>
-     </tr>
+         <th scope="row"><b>{{ list_item.companyName}}</b></th>
+        <th scope="row"><b>{{ list_item.symbol }}</b></th>
+       <th scope="row"><b>{{ list_item.primaryExchange }}</b></th>
+       <th scope="row"><b>${{ list_item.week52High }}</b></th>
+       <th scope="row"><b>${{ list_item.week52Low }}</b></th>
+       <th scope="row"><b>${{ list_item.latestPrice }}</b></th>
+       <th scope="row"><b>${{ list_item.previousClose }}</b></th>
+       <th scope="row"><b>{{ list_item.previousVolume }}</b></th>
+        <td><br><a href="/"> <span style='font-size:15px;'>&#10060; </span></a></br></td>
+         </tr>
+      {% endfor %}
 
-    {% endfor %}
 
-    {% endif %}
+
+
 
      </tbody>
      <!-- Basic Company Info Row End pt1-->
  </table>
      </h5>
+ {% endif %}
  <!-- Basic Company Info Table End pt1-->
 
 
- <!-- Basic Company Info Table Start pt2-->
- <h5><table align="center" class="table table-striped table-bordered table-hover"  style="width:400px; ">
-  <thead  class="thead-dark" >
-    <tr>
-    <h5>
-
-    </h5>
-    </tr>
-  </thead>
-      <!-- Basic Company Info Start pt2-->
-     <tbody>
-
-     </tbody>
-      <!-- Basic Company Info Row  End pt2-->
- </table>
-     </h5>
- <!-- Basic Company Info Table End pt2-->
-
- <!-- Bid Information & 52 Week High/Low Table Start-->
-<h5><table align="center" class="table table-striped table-bordered table-hover" >
-<thead  class="thead-dark">
- <h4>Bid Information & 52 Week High/Low</h4>
-    <tr>
-      <th scope="col">Bid Price</th>
-      <th scope="col">Bid Size</th>
-      <th scope="col">52 Week High:</th>
-      <th scope="col">52 Week Low</th>
-    </tr>
-  </thead>
-     <!-- Bid Information & 52 Week High/Low Row Start -->
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-     <!-- Bid Information & 52 Week High/Low Row End-->
-</table>
-    </h5>
- <!-- Bid Information & 52 Week High/Low Table End-->
-
- <!-- Time & Market Information Table Start-->
-<h5><table align="center" class="table table-striped table-bordered table-hover" >
-<thead  class="thead-dark">
- <h4>Time & Market Information</h4>
-    <tr>
-      <th scope="col">Latest Time</th>
-      <th scope="col">Latest Update</th>
-      <th scope="col">Real Time Size</th>
-      <th scope="col">Market Available </th>
-        <th scope="col">Market Cap</th>
-    </tr>
-  </thead>
-
-      <!-- Time & Market Information Info Start-->
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-      <td>@fat</td>
-    </tr>
-
-
-  </tbody>
-     <!-- Time & Market Information Info End-->
-</table>
-    </h5>
- <!-- Time & Market Information End-->
-
-
-<!-- Price & Volume table Start-->
- <h5><table class="table table-striped table-bordered table-hover" >
-<thead  class="thead-dark">
- <h4>Price & Volume </h4>
-    <tr>
-      <th scope="col">Latest Price</th>
-      <th scope="col">Previous Close</th>
-      <th scope="col">Previous Volume</th>
-      <th scope="col">Previous Change</th>
-      <th scope="col">Percent Change</th>
-      <th scope="col">Volume</th>
-      <th scope="col">Average Total Volume</th>
-    </tr>
-  </thead>
-  <!-- Price & Volume Row Info Start-->
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-    </tr>
-
-  </tbody>
-     <!-- Price & Volume Row Info End-->
-</table>
-     </h5>
-<!-- Price & Volume End-->
-
-
-
-<!-- Table Head Option for the Stock END -->
 
 <br/>
 
 
-{% for item in ticker %}
-<b>{{ item }}</b> - <a href="{% url 'delete' item.id%}"> <span style='font-size:15px;'>&#10060; </span></a><br/>
-    {% endfor %}
+
 </body>
 <br/>
 <br/>
-{% for list_item in output %}
-    {{ list_item.companyName}}<br/>
-    {{ list_item.symbol }}<br/>
-    {{ list_item.primaryExchange }}<br/>
-    ${{ list_item.latestPrice }}<br/>
-    ${{ list_item.previousClose }}<br/>
-    ${{ list_item.marketCap }}<br/>
-    {{ list_item.previousVolume }}<br/>
-    ${{ list_item.change }}<br/>
-    {{ list_item.changePercent }}%<br/>
-    {{ list_item.iexVolume}}<br/>
-    {{ list_item.avgTotalVolume}}<br/>
-    ${{ list_item.iexBidPrice }}<br/>
-    {{ list_item.iexBidSize}}<br/>
-    {{ list_item.week52High}}<br/>
-    {{ list_item.week52Low}}<br/>
-    {{ list_item.latestTime }}<br/>
-    {{ list_item.latestUpdate}}<br/>
-    {{ list_item.iexRealtimeSize }}<br/>
-    {{ list_item.isUSMarketOpen}}<br/><br/>
-{% endfor %}
-<!--Back to top of page-->
-<a href="#top" ><p align="right">Back to top</p></a>
-<!--Back to top of page-->
+
 {% endblock %}
 </html>
