--- a/stocks/quotes/templates/base.html
+++ b/stocks/quotes/templates/base.html
@@ -13,11 +13,7 @@
     <title>Stock Portfolio</title>
   </head>
   <body>
-<style>
-      body{
-            background-color: #808080;
-      }
-  </style>
+
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -34,6 +30,9 @@
         <a class="nav-link" href="{% url 'add_stock' %}">Add Stock</a>
       </li>
         <li class="nav-item">
+        <a class="nav-link" href="{% url 'delete_stock' %}">Delete Stock</a>
+      </li>
+        <li class="nav-item">
         <a class="nav-link" href="{% url 'about' %}">About</a>
       </li>
 
@@ -45,7 +44,7 @@
       <!--Posting info using POST to home function-->
     <form action="{% url 'home' %}"class="form-inline my-2 my-lg-0" method="POST">
         {% csrf_token %}
-      <input class="form-control mr-sm-2" type="search" placeholder="Search Stock Quote" aria-label="Search" name="ticker">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search Ticker Symbol" aria-label="Search" name="ticker" required="required">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
